--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Nikita Agarwal
 description: Summer 2024 DREU Program
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://nikita206.github.io/images/nikitaImg.jpeg
 
 #
 # Flags below are optional
